--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <header class="header">
         <div class="header-top">
+            <div>Test commit and push</div>
             <nav>
                 <ul>
                     <li><a href="">Shop</a></li>
