--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <body>
     <header class="header">
         <div class="header-top">
-            <div>Test commit and push</div>
             <nav>
                 <ul>
                     <li><a href="">Shop</a></li>
@@ -25,7 +24,7 @@
                 <img src="" alt="">
             </a>
         </div>
-        <div class="presonal">
+        <div class="personal">
                 <ul>
                     <li>
                         <a href=""><img src="" alt=""></a>
@@ -57,14 +56,192 @@
         </div>
     </header>
     <section class="fave"></section>
-    <section class="smoothies"></section>
-    <section class="about"></section>
-    <section class="products"></section>
-    <section class="story"></section>
-    <section class="testimonials"></section>
-    <section class="blog"></section>
-    <section class="instagram"></section>
-    <section class="footer"></section>
+    <section class="smoothies">
+        <h1>Super smoothies</h1>
+        <h2>What are these smoothies?</h2>
+        <p>A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products 
+            (milk, yogurt, ice-cream or cottage cheese), typically using a blender. Smoothies may be made using 
+            other ingredients, such as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), 
+            whey powder, plant milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.</p>
+        <div class="smoothies-block">
+            <img src="" alt="type1">
+            <p>Plant Based</p>
+        </div>
+        <div class="smoothies-block">
+            <img src="" alt="type2">
+        <p></p>
+        </div>
+        <div class="smothies-block">
+            <img src="" alt="type3">
+        <p></p>
+        </div>
+        <div class="smoothies-block">
+            <img src="" alt="type4">
+        <p></p>
+        </div>
+        <div class="smothies-block">
+            <img src="" alt="type5">
+        <p></p>
+        </div>
+        <div class="smoothies-block">
+            <img src="" alt="type6">
+        <p></p>
+        </div>
+        <div class="smothies-block">
+            <img src="" alt="type7">
+        <p></p>
+        </div>
+        <div class="smoothies-block">
+            <img src="" alt="type8">
+        <p></p>
+        </div>
+    </section>
+    <section class="about">
+        <h2>What makes Smoothie an awesome drink? </h2>
+        <img src="" alt="welcome-smoothie">
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        <button>
+            <a href="">About organic smoothies</a>
+        </button>
+    </section>
+    <section class="products">
+        <div>
+            <img src="" alt="product1">
+            <p>Dark Chocolate Smoothie</p>
+            <p>100 ml</p>
+            <a href="">Buy</a>
+        </div>
+        <div>
+            <img src="" alt="product2">
+            <p>Vegan Lettuce Smoothie</p>
+            <p>100 ml</p>
+            <a href="">Buy</a>
+        </div>
+        <div>
+            <img src="" alt="product3">
+            <p>Lemon Ginger Smoothie</p>
+            <p>100 ml</p>
+            <a href="">Buy</a>
+        </div>
+        <div>
+            <img src="" alt="product4">
+            <p>Turmeric Garlic Smoothie</p>
+            <p>100 ml</p>
+            <button><a href="">Buy</a></button>
+        </div>
+    </section>
+    <section class="story">
+        <h2>Our story</h2>
+        <p>As products typically using raw fruits or vegetables, 
+            smoothies include dietary fiber (e.g. pulp, skin, and seeds) 
+            and so are thicker than fruit juice, often with a 
+            consistency similar to a milkshake.</p>
+        <img src="" alt="our smoothie">
+        <button><a href="">Who we are</a></button>
+    </section>
+    <section class="testimonials">
+        <h2>Why clients LOVE us?</h2>
+        <img src="" alt="Person">
+        <p>”Smoothie is great. I don't know what else to say. 
+            I will let my mum know about this, she could really 
+            make use of Smoothie! Smoothie saved my business.”
+        </p>
+        <p>- from Santa Monica, CA</p>
+        <p>Sarah A</p>
+    </section>
+    <section class="blog">
+        <h2>Our blog</h2>
+        <h3>ASAFOETIDA - THE NEXT TURMERIC?</h3>
+        <p>June 16,2020</p>
+        <p>If the fruit ingredients and the green vegetable<br>
+            ingredients are both juiced ahead of time, the mixed juice<br>
+            doesn't even have to be blended like a smoothie, i.e. a<br>
+            green juice or anything... <a href="">Read More</a></p>
+    </section>
+    <section class="instagram">
+        <h4>ashasuperfoods</h4>
+        <img src="" alt="IconInsta">
+        <div>
+            <img src="" alt="InstaPic1">
+            <img src="" alt="IconInsta">
+        </div>
+        <div>
+            <img src="" alt="InstaPic2">
+            <img src="" alt="IconInsta">
+        </div>
+        <div>
+            <img src="" alt="InstaPic3">
+            <img src="" alt="IconInsta">
+        </div>
+        <div>
+            <img src="" alt="InstaPic4">
+            <img src="" alt="IconInsta">
+        </div>
+    </section>
+    <section class="footer">
+        <img class="site-logo" src="logo.png" alt="The company/site logo" />
+    </section>
+    <footer>
+        <div class="footer-top">
+            <div class="logo">
+                <a href="">
+                    <img src="" alt="logo">
+                </a>
+            </div>
+            <div class="Info">
+                <ul>
+                    <li class="caption"><h4>Information</h4></li>
+                    <li>Searchgit</li>
+                    <li>Contact us</li>
+                    <li>Terms & Conditions</li>
+                    <li>Privacy Policy</li>
+                </ul>
+            </div>
+            <div class="Pay">
+                <h3>Payment</h3>
+                <ul>
+                    <li class="caption"><h4>Payment</h4></li>
+                    <li><a href=""><img src="" alt=""></a></li>
+                    <li><a href=""><img src="" alt=""></a></li>
+                    <li><a href=""><img src="" alt=""></a></li>
+                    <li><a href=""><img src="" alt=""></a></li>
+                    <li><a href=""><img src="" alt=""></a></li>
+                    <li><a href=""><img src="" alt=""></a></li>
+                    <li><a href=""><img src="" alt=""></a></li>
+                    <li><a href=""><img src="" alt=""></a></li>
+                    <li><a href=""><img src="" alt=""></a></li>
+                    <li><a href=""><img src="" alt=""></a></li>
+                </ul>
+            </div>
+            <div>
+                <h4>Don’t miss out!</h4>
+                <a href="" alt="subscribe">Subscribe to our newsletter</a>
+            </div>
+            <div class="follow">
+                <ul>
+                    <li><a href=""><img src="" alt="Facebook"></a></li>
+                    <li><a href=""><img src="" alt="Pinterest"></a></li>
+                    <li><a href=""><img src="" alt="Instagram"></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>© 2020. All Rights Reserved.</p>
+            <p>
+                <a href="#top">Top</a>
+                <img src="" alt="Top">
+            </p>
+        </div>    
+    </footer>
 </body>
 </html>
 
