--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <div class="header-top">
             <nav>
                 <ul>
-                    <li><a href="">Shop</a></li>
                     <li><a href="">Home</a></li>
+                    <li><a href="">Shop</a></li>
                     <li><a href="">Story</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="">Blog</a></li>
@@ -27,13 +27,13 @@
         <div class="personal">
                 <ul>
                     <li>
-                        <a href=""><img src="" alt=""></a>
+                        <a href=""><img src="" alt="search-icon"></a>
                     </li>
                     <li>
-                        <a href=""><img src="" alt=""></a>
+                        <a href=""><img src="" alt="user-icon"></a>
                     </li>
                     <li>
-                        <a href=""><img src="" alt=""></a>
+                        <a href=""><img src="" alt="cart"></a>
                         <span>3</span>
                     </li>
                 </ul>
@@ -41,13 +41,13 @@
         <div class="social">
             <ul>
                 <li>
-                <a href=""><img scr="" alt=""></a>
+                <a href=""><img scr="" alt="Facebook"></a>
                 </li>
                 <li>
-                    <a href=""><img src="" alt=""></a>
+                    <a href=""><img src="" alt="Pinterest"></a>
                 </li>
                 <li>
-                    <a href=""><img src="" alt=""></a>
+                    <a href=""><img src="" alt="Instagram"></a>
                 </li>
             </ul>
         </div>
@@ -69,45 +69,45 @@
         </div>
         <div class="smoothies-block">
             <img src="" alt="type2">
-        <p></p>
+            <p>Vegan</p>
         </div>
         <div class="smothies-block">
             <img src="" alt="type3">
-        <p></p>
+            <p>Paleo</p>
         </div>
         <div class="smoothies-block">
             <img src="" alt="type4">
-        <p></p>
+            <p>Gluten-Free</p>
         </div>
         <div class="smothies-block">
             <img src="" alt="type5">
-        <p></p>
+            <p>Corn-Free</p>
         </div>
         <div class="smoothies-block">
             <img src="" alt="type6">
-        <p></p>
+            <p>Soy-Free</p>
         </div>
         <div class="smothies-block">
             <img src="" alt="type7">
-        <p></p>
+            <p>Ayurverdic</p>
         </div>
         <div class="smoothies-block">
             <img src="" alt="type8">
-        <p></p>
+            <p>Made With Love</p>
         </div>
     </section>
     <section class="about">
         <h2>What makes Smoothie an awesome drink? </h2>
         <img src="" alt="welcome-smoothie">
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Crunchy Puffs Texture</li>
+            <li>100 Calories per drink</li>
+            <li>4g Plant Protein </li>
+            <li>Good source of Magnesium & Vitamin B6</li>
+            <li>No Sugar in our Savory Flavors</li>
+            <li>Non-GMO, Vegan & Paleo</li>
+            <li>Gluten-Free & Grain-Free</li>
+            <li>Corn-Free & Soy-Free</li>
         </ul>
         <button>
             <a href="">About organic smoothies</a>
@@ -207,19 +207,17 @@
                 </ul>
             </div>
             <div class="Pay">
-                <h3>Payment</h3>
+                <h4>Payment</h4>
                 <ul>
-                    <li class="caption"><h4>Payment</h4></li>
-                    <li><a href=""><img src="" alt=""></a></li>
-                    <li><a href=""><img src="" alt=""></a></li>
-                    <li><a href=""><img src="" alt=""></a></li>
-                    <li><a href=""><img src="" alt=""></a></li>
-                    <li><a href=""><img src="" alt=""></a></li>
-                    <li><a href=""><img src="" alt=""></a></li>
-                    <li><a href=""><img src="" alt=""></a></li>
-                    <li><a href=""><img src="" alt=""></a></li>
-                    <li><a href=""><img src="" alt=""></a></li>
-                    <li><a href=""><img src="" alt=""></a></li>
+                    <li><a href=""><img src="" alt="AMEX"></a></li>
+                    <li><a href=""><img src="" alt="Apple Pay"></a></li>
+                    <li><a href=""><img src="" alt="Maestro"></a></li>
+                    <li><a href=""><img src="" alt="Discover"></a></li>
+                    <li><a href=""><img src="" alt="JCB"></a></li>
+                    <li><a href=""><img src="" alt="Mastercard"></a></li>
+                    <li><a href=""><img src="" alt="Paypal"></a></li>
+                    <li><a href=""><img src="" alt="Shopify Pay"></a></li>
+                    <li><a href=""><img src="" alt="Visa"></a></li>
                 </ul>
             </div>
             <div>
@@ -227,8 +225,9 @@
                 <a href="" alt="subscribe">Subscribe to our newsletter</a>
             </div>
             <div class="follow">
+                <h4>Follow Us</h4>
                 <ul>
-                    <li><a href=""><img src="" alt="Facebook"></a></li>
+                    <><a href=""><img src="" alt="Facebook"></a></>
                     <li><a href=""><img src="" alt="Pinterest"></a></li>
                     <li><a href=""><img src="" alt="Instagram"></a></li>
                 </ul>
