--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="social">
             <ul>
                 <li>
-                <a href=""><img scr="" alt="Facebook"></a>
+                    <a href=""><img scr="" alt="Facebook"></a>
                 </li>
                 <li>
                     <a href=""><img src="" alt="Pinterest"></a>
@@ -55,7 +55,6 @@
             <button>Shop now</button>
         </div>
     </header>
-    <section class="fave"></section>
     <section class="smoothies">
         <h1>Super smoothies</h1>
         <h2>What are these smoothies?</h2>
@@ -63,55 +62,59 @@
             (milk, yogurt, ice-cream or cottage cheese), typically using a blender. Smoothies may be made using 
             other ingredients, such as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), 
             whey powder, plant milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.</p>
-        <div class="smoothies-block">
-            <img src="" alt="type1">
-            <p>Plant Based</p>
-        </div>
-        <div class="smoothies-block">
-            <img src="" alt="type2">
-            <p>Vegan</p>
-        </div>
-        <div class="smothies-block">
-            <img src="" alt="type3">
-            <p>Paleo</p>
-        </div>
-        <div class="smoothies-block">
-            <img src="" alt="type4">
-            <p>Gluten-Free</p>
-        </div>
-        <div class="smothies-block">
-            <img src="" alt="type5">
-            <p>Corn-Free</p>
-        </div>
-        <div class="smoothies-block">
+        <div class="smooties-block">    
+            <div class="sm-features">
+                <img src="" alt="type1">
+                <p>Plant Based</p>
+            </div>
+            <div class="sm-features">
+                <img src="" alt="type2">
+                <p>Vegan</p>
+            </div>
+            <div class="sm-features">
+                <img src="" alt="type3">
+                <p>Paleo</p>
+            </div>
+            <div class="sm-features">
+                <img src="" alt="type4">
+                <p>Gluten-Free</p>
+            </div>
+            <div class="sm-features">
+                <img src="" alt="type5">
+                <p>Corn-Free</p>
+            </div>
+        <div class="sm-features">
             <img src="" alt="type6">
             <p>Soy-Free</p>
         </div>
-        <div class="smothies-block">
+        <div class="sm-features">
             <img src="" alt="type7">
             <p>Ayurverdic</p>
         </div>
-        <div class="smoothies-block">
+        <div class="sm-features">
             <img src="" alt="type8">
             <p>Made With Love</p>
         </div>
+        </div>
     </section>
     <section class="about">
-        <h2>What makes Smoothie an awesome drink? </h2>
         <img src="" alt="welcome-smoothie">
-        <ul>
-            <li>Crunchy Puffs Texture</li>
-            <li>100 Calories per drink</li>
-            <li>4g Plant Protein </li>
-            <li>Good source of Magnesium & Vitamin B6</li>
-            <li>No Sugar in our Savory Flavors</li>
-            <li>Non-GMO, Vegan & Paleo</li>
-            <li>Gluten-Free & Grain-Free</li>
-            <li>Corn-Free & Soy-Free</li>
-        </ul>
-        <button>
-            <a href="">About organic smoothies</a>
-        </button>
+        <div class="About">
+            <h2>What makes Smoothie an awesome drink? </h2>
+            <ul>
+                <li>Crunchy Puffs Texture</li>
+                <li>100 Calories per drink</li>
+                <li>4g Plant Protein </li>
+                <li>Good source of Magnesium & Vitamin B6</li>
+                <li>No Sugar in our Savory Flavors</li>
+                <li>Non-GMO, Vegan & Paleo</li>
+                <li>Gluten-Free & Grain-Free</li>
+                <li>Corn-Free & Soy-Free</li>
+            </ul>
+            <button>
+                <a href="">About organic smoothies</a>
+            </button>
+        </div>
     </section>
     <section class="products">
         <div>
@@ -140,23 +143,28 @@
         </div>
     </section>
     <section class="story">
-        <h2>Our story</h2>
-        <p>As products typically using raw fruits or vegetables, 
+        <img src="" alt="our smoothie">
+        <div class="story">    
+            <h2>Our story</h2>
+            <p>As products typically using raw fruits or vegetables, 
             smoothies include dietary fiber (e.g. pulp, skin, and seeds) 
             and so are thicker than fruit juice, often with a 
             consistency similar to a milkshake.</p>
-        <img src="" alt="our smoothie">
-        <button><a href="">Who we are</a></button>
+        
+            <button><a href="">Who we are</a></button>
+            </div>
     </section>
     <section class="testimonials">
-        <h2>Why clients LOVE us?</h2>
-        <img src="" alt="Person">
-        <p>”Smoothie is great. I don't know what else to say. 
+        <div class="testimonials">
+            <h2>Why clients LOVE us?</h2>
+            <p>”Smoothie is great. I don't know what else to say. 
             I will let my mum know about this, she could really 
             make use of Smoothie! Smoothie saved my business.”
-        </p>
-        <p>- from Santa Monica, CA</p>
-        <p>Sarah A</p>
+            </p>
+            <p>- from Santa Monica, CA</p>
+            <p>Sarah A</p>
+        </div>    
+        <img src="" alt="Person">
     </section>
     <section class="blog">
         <h2>Our blog</h2>
@@ -187,59 +195,55 @@
             <img src="" alt="IconInsta">
         </div>
     </section>
-    <section class="footer">
-        <img class="site-logo" src="logo.png" alt="The company/site logo" />
-    </section>
     <footer>
-        <div class="footer-top">
-            <div class="logo">
-                <a href="">
-                    <img src="" alt="logo">
-                </a>
+        <section class="footer">
+            <div class="footer=top">
+                <div class="logo">
+                    <a href=""><img src="" alt="logo"></a>
+                </div>
+                <div class="Info">
+                    <ul>
+                        <li class="caption"><h4>Information</h4></li>
+                        <li>Searchgit</li>
+                        <li>Contact us</li>
+                        <li>Terms & Conditions</li>
+                        <li>Privacy Policy</li>
+                    </ul>
+                </div>
+                <div class="Pay">
+                    <h4>Payment</h4>
+                    <ul>
+                        <li><a href=""><img src="" alt="AMEX"></a></li>
+                        <li><a href=""><img src="" alt="Apple Pay"></a></li>
+                        <li><a href=""><img src="" alt="Maestro"></a></li>
+                        <li><a href=""><img src="" alt="Discover"></a></li>
+                        <li><a href=""><img src="" alt="JCB"></a></li>
+                        <li><a href=""><img src="" alt="Mastercard"></a></li>
+                        <li><a href=""><img src="" alt="Paypal"></a></li>
+                        <li><a href=""><img src="" alt="Shopify Pay"></a></li>
+                        <li><a href=""><img src="" alt="Visa"></a></li>
+                    </ul>
+                </div>   
+                <div class="subscribe">
+                    <div>
+                        <h4>Don’t miss out!</h4>
+                        <textarea placeholder="Subscribe to our newsletter"></textarea>
+                    </div>
+                    <div class="follow">
+                        <h4>Follow Us</h4>
+                        <ul>
+                            <li><a href=""><img src="" alt="Facebook"></a></li>
+                            <li><a href=""><img src="" alt="Pinterest"></a></li>
+                            <li><a href=""><img src="" alt="Instagram"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>    
+            <div class="footer-bottom">
+                    <p>© 2020. All Rights Reserved.</p>
+                    <p><a href="#top">Top</a><img src="" alt="Top"></p>
             </div>
-            <div class="Info">
-                <ul>
-                    <li class="caption"><h4>Information</h4></li>
-                    <li>Searchgit</li>
-                    <li>Contact us</li>
-                    <li>Terms & Conditions</li>
-                    <li>Privacy Policy</li>
-                </ul>
-            </div>
-            <div class="Pay">
-                <h4>Payment</h4>
-                <ul>
-                    <li><a href=""><img src="" alt="AMEX"></a></li>
-                    <li><a href=""><img src="" alt="Apple Pay"></a></li>
-                    <li><a href=""><img src="" alt="Maestro"></a></li>
-                    <li><a href=""><img src="" alt="Discover"></a></li>
-                    <li><a href=""><img src="" alt="JCB"></a></li>
-                    <li><a href=""><img src="" alt="Mastercard"></a></li>
-                    <li><a href=""><img src="" alt="Paypal"></a></li>
-                    <li><a href=""><img src="" alt="Shopify Pay"></a></li>
-                    <li><a href=""><img src="" alt="Visa"></a></li>
-                </ul>
-            </div>
-            <div>
-                <h4>Don’t miss out!</h4>
-                <a href="" alt="subscribe">Subscribe to our newsletter</a>
-            </div>
-            <div class="follow">
-                <h4>Follow Us</h4>
-                <ul>
-                    <><a href=""><img src="" alt="Facebook"></a></>
-                    <li><a href=""><img src="" alt="Pinterest"></a></li>
-                    <li><a href=""><img src="" alt="Instagram"></a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>© 2020. All Rights Reserved.</p>
-            <p>
-                <a href="#top">Top</a>
-                <img src="" alt="Top">
-            </p>
-        </div>    
+        </section>    
     </footer>
 </body>
 </html>
