--- a/index.html
+++ b/index.html
@@ -83,18 +83,18 @@
                 <img src="" alt="type5">
                 <p>Corn-Free</p>
             </div>
-        <div class="sm-features">
-            <img src="" alt="type6">
-            <p>Soy-Free</p>
-        </div>
-        <div class="sm-features">
-            <img src="" alt="type7">
-            <p>Ayurverdic</p>
-        </div>
-        <div class="sm-features">
-            <img src="" alt="type8">
-            <p>Made With Love</p>
-        </div>
+            <div class="sm-features">
+                <img src="" alt="type6">
+                <p>Soy-Free</p>
+            </div>
+            <div class="sm-features">
+                <img src="" alt="type7">
+                <p>Ayurverdic</p>
+            </div>
+            <div class="sm-features">
+                <img src="" alt="type8">
+                <p>Made With Love</p>
+            </div>
         </div>
     </section>
     <section class="about">
@@ -157,12 +157,12 @@
     <section class="testimonials">
         <div class="testimonials">
             <h2>Why clients LOVE us?</h2>
-            <p>”Smoothie is great. I don't know what else to say. 
+            <p><q>Smoothie is great. I don't know what else to say. 
             I will let my mum know about this, she could really 
-            make use of Smoothie! Smoothie saved my business.”
-            </p>
+            make use of Smoothie! Smoothie saved my business.
+            </q></p>
             <p>- from Santa Monica, CA</p>
-            <p>Sarah A</p>
+            <p><span>Sarah A</span></p>
         </div>    
         <img src="" alt="Person">
     </section>
