--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="social">
             <ul>
                 <li>
-                    <a href=""><img scr="" alt="Facebook"></a>
+                    <a href=""><img src="" alt="Facebook"></a>
                 </li>
                 <li>
                     <a href=""><img src="" alt="Pinterest"></a>
@@ -111,9 +111,7 @@
                 <li>Gluten-Free & Grain-Free</li>
                 <li>Corn-Free & Soy-Free</li>
             </ul>
-            <button>
-                <a href="">About organic smoothies</a>
-            </button>
+                <p><a href="">About organic smoothies</a></p>
         </div>
     </section>
     <section class="products">
@@ -125,7 +123,7 @@
         </div>
         <div>
             <img src="" alt="product2">
-            <p>Vegan Lettuce Smoothie</p>
+            <p>Vegan Lettuce Smoothie</p> 
             <p>100 ml</p>
             <a href="">Buy</a>
         </div>
