--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         <div class="header-content">
             <button>Shop now</button>
         </div>
+        <h1>Super smoothies</h1>
     </header>
     <section class="smoothies">
-        <h1>Super smoothies</h1>
         <h2>What are these smoothies?</h2>
         <p>A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products 
             (milk, yogurt, ice-cream or cottage cheese), typically using a blender. Smoothies may be made using 
@@ -64,35 +64,35 @@
             whey powder, plant milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.</p>
         <div class="smooties-block">    
             <div class="sm-features">
-                <img src="" alt="type1">
+                <img src="" alt="Plant Based">
                 <p>Plant Based</p>
             </div>
             <div class="sm-features">
-                <img src="" alt="type2">
+                <img src="" alt="Vegan">
                 <p>Vegan</p>
             </div>
             <div class="sm-features">
-                <img src="" alt="type3">
+                <img src="" alt="Paleo">
                 <p>Paleo</p>
             </div>
             <div class="sm-features">
-                <img src="" alt="type4">
+                <img src="" alt="Gluten-Free">
                 <p>Gluten-Free</p>
             </div>
             <div class="sm-features">
-                <img src="" alt="type5">
+                <img src="" alt="Corn-Free">
                 <p>Corn-Free</p>
             </div>
             <div class="sm-features">
-                <img src="" alt="type6">
+                <img src="" alt="Soy-Free">
                 <p>Soy-Free</p>
             </div>
             <div class="sm-features">
-                <img src="" alt="type7">
+                <img src="" alt="Ayurverdic">
                 <p>Ayurverdic</p>
             </div>
             <div class="sm-features">
-                <img src="" alt="type8">
+                <img src="" alt="Made With Love">
                 <p>Made With Love</p>
             </div>
         </div>
@@ -111,33 +111,33 @@
                 <li>Gluten-Free & Grain-Free</li>
                 <li>Corn-Free & Soy-Free</li>
             </ul>
-                <p><a href="">About organic smoothies</a></p>
+                <buton>About organic smoothies</buton>
         </div>
     </section>
     <section class="products">
         <div>
-            <img src="" alt="product1">
+            <img src="" alt="Dark Chocolate">
             <p>Dark Chocolate Smoothie</p>
             <p>100 ml</p>
-            <a href="">Buy</a>
+            <button>Buy</button>
         </div>
         <div>
-            <img src="" alt="product2">
+            <img src="" alt="Vegan Lettuce">
             <p>Vegan Lettuce Smoothie</p> 
             <p>100 ml</p>
-            <a href="">Buy</a>
+            <button>Buy</button>
         </div>
         <div>
-            <img src="" alt="product3">
+            <img src="" alt="Lemon Ginger">
             <p>Lemon Ginger Smoothie</p>
             <p>100 ml</p>
-            <a href="">Buy</a>
+            <button>Buy</button>
         </div>
         <div>
-            <img src="" alt="product4">
+            <img src="" alt="Turmeric Garlic">
             <p>Turmeric Garlic Smoothie</p>
             <p>100 ml</p>
-            <button><a href="">Buy</a></button>
+            <button>Buy</button>
         </div>
     </section>
     <section class="story">
@@ -148,9 +148,8 @@
             smoothies include dietary fiber (e.g. pulp, skin, and seeds) 
             and so are thicker than fruit juice, often with a 
             consistency similar to a milkshake.</p>
-        
-            <button><a href="">Who we are</a></button>
-            </div>
+            <button>Who we are</button>
+        </div>
     </section>
     <section class="testimonials">
         <div class="testimonials">
@@ -159,7 +158,7 @@
             I will let my mum know about this, she could really 
             make use of Smoothie! Smoothie saved my business.
             </q></p>
-            <p>- from Santa Monica, CA</p>
+            <cite>- from Santa Monica, CA</cite>
             <p><span>Sarah A</span></p>
         </div>    
         <img src="" alt="Person">
@@ -167,15 +166,14 @@
     <section class="blog">
         <h2>Our blog</h2>
         <h3>ASAFOETIDA - THE NEXT TURMERIC?</h3>
-        <p>June 16,2020</p>
+        <time>June 16,2020</time>
         <p>If the fruit ingredients and the green vegetable<br>
             ingredients are both juiced ahead of time, the mixed juice<br>
             doesn't even have to be blended like a smoothie, i.e. a<br>
             green juice or anything... <a href="">Read More</a></p>
     </section>
     <section class="instagram">
-        <h4>ashasuperfoods</h4>
-        <img src="" alt="IconInsta">
+        <a><img src="IconInsta">ashasuperfoods</a>
         <div>
             <img src="" alt="InstaPic1">
             <img src="" alt="IconInsta">
@@ -200,8 +198,8 @@
                     <a href=""><img src="" alt="logo"></a>
                 </div>
                 <div class="Info">
+                    <h4>Information</h>
                     <ul>
-                        <li class="caption"><h4>Information</h4></li>
                         <li>Searchgit</li>
                         <li>Contact us</li>
                         <li>Terms & Conditions</li>
@@ -222,7 +220,7 @@
                         <li><a href=""><img src="" alt="Visa"></a></li>
                     </ul>
                 </div>   
-                <div class="subscribe">
+                <div class="Sub">
                     <div>
                         <h4>Don’t miss out!</h4>
                         <textarea placeholder="Subscribe to our newsletter"></textarea>
@@ -239,7 +237,7 @@
             </div>    
             <div class="footer-bottom">
                     <p>© 2020. All Rights Reserved.</p>
-                    <p><a href="#top">Top</a><img src="" alt="Top"></p>
+                    <p><img src="" alt="Top"><a href="#top">Top</a></p>
             </div>
         </section>    
     </footer>
