--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <!--подключение стилей, последний - нужный мне-->
     <!--сброс стилей : link rel="stylesheet" href="css/reset.css"-->
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+
+<!--Header-->
     <header class="header">
         <div class="header-top">
             <div class="header__top-inner">
@@ -33,14 +36,14 @@
                         <li class="menu__item">
                             <a class="menu__link" href="">TESTIMONIALS</a>
                         </li>
-                    </ul>
-                </nav>
-            </div>    
+                    </ul><!--/.menu__list-->
+                </nav><!--/.menu-->
+            </div><!--/.header__top-inner-->   
             <div class="logo">
                 <a class="logo__link" href="#">
                     <img class="logo__img" src="./assets/images/SMweb/Logo.png" alt="">
                 </a>
-            </div>
+            </div><!--/.logo-->
             <div class="personal">
                 <ul class="personal__list">
                     <li class="personal__list-item">
@@ -55,91 +58,97 @@
                     </li>
                     <li class="personal__list-item">
                         <a class="personal__link-cart" href="">
-                            <img class="personal__cart-icon" src="./assets/images/SMweb/Cart-icon.png" alt="">
+                            <img class="personal__cart-icon" 
+                                    src="./assets/images/SMweb/Cart-icon.png" alt="">
                             <span class="personal__cart-count">3</span>
                         </a>
                     </li>
-                </ul>
-            </div>
+                </ul><!--/.personal__list-->
+            </div><!--/.personal-->
             <div class="social">
                 <ul class="social__list">
                     <li class="social__item">
                         <a class="social__link" href="">
-                            <img class="social__icon" src="./assets/images/SMweb/Facebook.png" alt="Facebook">
+                            <img class="social__icon" src="./assets/images/SMweb/fb.png" alt="Facebook">
                         </a>
                     </li>
                     <li class="social__item">
                         <a class="social__link" href="">
-                            <img class="social__icon" src="./assets/images/SMweb/Pinterest.png" alt="Pinterest">
+                            <img class="social__icon" src="./assets/images/SMweb/fb.png" alt="Pinterest">
                         </a>
                     </li>
                     <li class="social__item">
                         <a class="social__link" href="">
-                            <img class="social__icon" src="./assets/images/SMweb/Instagram.png" alt="Instagram">
+                            <img class="social__icon" src="./assets/images/SMweb/fb.png" alt="Instagram">
                         </a>
                     </li>
-                </ul>
-            </div>
-        </div>
+                </ul><!--/.social__list-->
+            </div><!--/.social-->
+        </div> <!--/.header-top-->
         <div class="header-content">
             <div class="header__content-inner">
-                <div class="header__btn-wrapper">
+                <div class="header__btn-wrapper"> <!--Button-->
                     <button class="btn btn--green-bg">Shop now
                         <img class="arrow-yellow"
                             src="./assets/images/SMweb/Arrow.png" alt="">
                     </button>
                 </div>
-            </div>
-        </div>
+            </div><!--/.header__content-inner-->
+        </div><!--/.header-content-->
     </header>
+
+<!--Main-section-->
     <section class="smoothies">
-        <h2 class="title title--orange">What are these smoothies?</h2>
-        <p>A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products 
+        <div class="container">
+            <h2 class="title title--orange">What are these smoothies?</h2>
+            <p>A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products 
             (milk, yogurt, ice-cream or cottage cheese), typically using a blender. Smoothies may be made using 
             other ingredients, such as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), 
             whey powder, plant milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.</p>
-        <div class="smoothies-block">    
-            <div class="sm-features">
-                <img class="sm-features__item" src="./assets/images/SMweb/plantbased.png" alt="Plant Based">
-                <h5>Plant Based</h5>
-            </div>
-            <div class="sm-features">
-                <img class="sm-features__item" src="./assets/images/SMweb/vegan.png" alt="Vegan">
-                <h5>Vegan</h5>
-            </div>
-            <div class="sm-features">
-                <img class="sm-features__item" src="./assets/images/SMweb/paleo.png" alt="Paleo">
-                <h5>Paleo</h5>
-            </div>
-            <div class="sm-features">
-                <img class="sm-features__item" src="./assets/images/SMweb/gluten-free.png" alt="Gluten-Free">
-                <h5>Gluten-Free</h5>
-            </div>
-            <div class="sm-features">
-                <img class="sm-features__item" src="./assets/images/SMweb/conr-free.png" alt="Corn-Free">
-                <h5>Corn-Free</h5>
-            </div>
-            <div class="sm-features">
-                <img class="sm-features__item" src="./assets/images/SMweb/soy-free.png" alt="Soy-Free">
-                <h5>Soy-Free</h5>
-            </div>
-            <div class="sm-features">
-                <img class="sm-features__item" src="./assets/images/SMweb/ayurvedic.png" alt="Ayurverdic">
-                <h5>Ayurverdic</h5>
-            </div>
-            <div class="sm-features">
-                <img class="sm-features__item" src="./assets/images/SMweb/madelove.png" alt="Made With Love">
-                <h5>Made With Love</h5>
-            </div>
-        </div>
+            <div class="smoothies-block">    
+                <div class="sm-features">
+                    <img class="sm-features__item" src="./assets/images/SMweb/plantbased.png" alt="Plant Based">
+                    <h5>Plant Based</h5>
+                </div>
+                <div class="sm-features">
+                    <img class="sm-features__item" src="./assets/images/SMweb/vegan.png" alt="Vegan">
+                    <h5>Vegan</h5>
+                </div>
+                <div class="sm-features">
+                    <img class="sm-features__item" src="./assets/images/SMweb/paleo.png" alt="Paleo">
+                    <h5>Paleo</h5>
+                </div>
+                <div class="sm-features">
+                    <img class="sm-features__item" src="./assets/images/SMweb/gluten-free.png" alt="Gluten-Free">
+                    <h5>Gluten-Free</h5>
+                </div>
+                <div class="sm-features">
+                    <img class="sm-features__item" src="./assets/images/SMweb/conr-free.png" alt="Corn-Free">
+                    <h5>Corn-Free</h5>
+                </div>
+                <div class="sm-features">
+                    <img class="sm-features__item" src="./assets/images/SMweb/soy-free.png" alt="Soy-Free">
+                    <h5>Soy-Free</h5>
+                </div>
+                <div class="sm-features">
+                    <img class="sm-features__item" src="./assets/images/SMweb/ayurvedic.png" alt="Ayurverdic">
+                    <h5>Ayurverdic</h5>
+                </div>
+                <div class="sm-features">
+                    <img class="sm-features__item" src="./assets/images/SMweb/madelove.png" alt="Made With Love">
+                    <h5>Made With Love</h5>
+                </div>
+            </div><!--./smoothies-block-->
+        </div><!--/.container-->    
     </section>
+
     <section class="about">
         <img class="summer-pic" src="./assets/images/SMweb/welsum.png" alt="welcome-summer">
         <div class="about-top">
             <h2 class="title title__white">What makes Smoothie<br>
                 an <span class="newcolor">awesome drink?</span></h2>
                 <img class="underline" src="assets/images/SMweb/lineGreen.png" alt="Green Line">
-            <ul>
+            <ul class="about-list">
                 <li>Crunchy <span>Puffs Texture</span></li>
                 <li>100 Calories <span>per drink</span></li>
                 <li><span>4g Plant Protein</span></li>
@@ -156,6 +165,7 @@
                 </div>                 
         </div>
     </section>
+
     <section class="products">
         <div class="products-list">
             <div class="products-list__item products-choko">
@@ -200,12 +210,11 @@
             </div>
         </div>    
     </section>
+
     <section class="story">
         <div class="story-top">    
-            <h2 class="title title--orange">Our story</h2>
-            <p class=>As products typically using raw fruits or vegetables, 
-            smoothies include dietary fiber (e.g. pulp, skin, and seeds) 
-            and so are thicker than fruit juice, often with a 
+            <h2 class="story__title title--orange">Our story</h2>
+            <p class="story__text" >As products typically using raw fruits or vegetables, smoothies include dietary fiber (e.g. pulp, skin,and seeds) and so are thicker than fruit juice, often with a 
             consistency similar to a milkshake.</p>
             <div class="story__btn-wrapper">    
                 <button class="btn btn--green-bg">Who we are
@@ -214,25 +223,26 @@
                 </button>
             </div>        
         </div>
-        <!--Штамп <img src="./assets/images/SMweb/Stamp.png" alt="stamp">-->
-        <img class="story-pic" src="./assets/images/SMweb/straberry.png" alt="our smoothie">
-    </section>
-    <section class="testimonials">
-        <div class="testimonials-top">
-            <h2 class="title title--orange">Why clients <span>LOVE</span> us?</h2>
-            <p><q>Smoothie is great. I don't know what else to say. 
-            I will let my mum know about this, she could really 
-            make use of Smoothie! Smoothie saved my business.
-            </q></p>
-            <cite>- from Santa Monica, CA</cite>
-            <p>Sarah A</p>
+        <div class="story-stamp">
+            <img class="stamp" src="./assets/images/SMweb/Stamp.png" alt="stamp">
+            <img class="story-pic" src="./assets/images/SMweb/straberry.png" alt="our smoothie">
         </div>    
-        <img src="./assets/images/SMweb/face.png" alt="Face">
-                <img class="arrow-yellow"
-                    src="./assets/images/SMweb/Arrow.png" alt="">
-                <img class="arrow--yellow"
-                    src="./assets/images/SMweb/Arrow.png" alt="">
     </section>
+
+    <section class="testimonials">
+        <div class="testimonials__top">
+            <h2 class="title title--orange">Why clients <span class="client">LOVE</span> us?</h2>
+        </div>    
+        <div class="testimonials-content">
+            <div class="client__name">Sarah A</div>
+            <div class="client__text">
+                <p>"Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really make use of Smoothie! Smoothie saved my business."</p>
+                <cite>- from Santa Monica, CA</cite>
+            </div>                    
+            <img class="client__pic" src="./assets/images/SMweb/face.png" alt="Face">
+        </div>    
+    </section>
+
     <section class="blog">
         <div class="blog-content">
             <div class="blog-content__item">
@@ -246,10 +256,11 @@
                 <p>If the fruit ingredients and the green vegetable<br>
                 ingredients are both juiced ahead of time, the mixed juice<br>
                 doesn't even have to be blended like a smoothie, i.e. a<br>
-                green juice or anything... <a href="">Read More</a></p>
+                green juice or anything... <a class="article" href="">Read More</a></p>
             </div>
         </div>    
     </section>
+
     <section class="instagram">
         <a><img src="./assets/images/SMweb/icon.png" alt="InstaIcon">ashasuperfoods</a>
         <div class="instagram-galery">
@@ -273,9 +284,10 @@
                 <img src="./assets/images/SMweb/insta5.png" alt="InstaPic5">
                 <img class="insta-icon" src="./assets/images/SMweb/icon1.png" alt="IconInsta">
             </div>
-
         </div>
     </section>
+
+<!--Footer-->
     <footer>
         <section class="footer">
             <div class="footer-top">
@@ -283,7 +295,7 @@
                         <a class="logo__link" href="#">
                             <img class="logo__img" src="./assets/images/SMweb/Logo.png" alt="">
                         </a>
-                    </div>
+                    </div><!--/.logo-->
                     <div class="info">
                         <h4>Information</h4>
                         <ul class="info__list">
@@ -293,9 +305,9 @@
                             <li class="info__item"><a class="info__link" href="">Terms & Conditions</a></li>
                             <li class="info__item"><a class="info__link" href="">Privacy Policy</a></li>
                         </ul>
-                    </div>
+                    </div><!--/.info-->
                     <div class="pay">
-                        <h4>Payment</hclass=>
+                        <h4>Payment</h4>
                         <ul class="pay__list">
                             <li class="pay__item"><a href=""><img src="./assets/images/SMweb/AMEX.png" alt="AMEX"></a></li>
                             <li class="pay__item"><a href=""><img src="./assets/images/SMweb/Apple Pay.png" alt="Apple Pay"></a></li>
@@ -307,13 +319,14 @@
                             <li class="pay__item"><a href=""><img src="./assets/images/SMweb/Shopify.png" alt="Shopify Pay"></a></li>
                             <li class="pay__item"><a href=""><img src="./assets/images/SMweb/Visa.png" alt="Visa"></a></li>
                         </ul>
-                    </div>   
+                    </div><!--/.pay-->   
                     <div class="subscribe">
                         <div>
                             <h4>Don’t miss out!</h4>
                             <textarea placeholder="Subscribe to our newsletter"></textarea>
                         </div>
                         <div class="follow">
+                            <img src="./assets/images/SMweb/ArrowFollow.png" alt="Follow Arrow">
                             <h4 class="title title--follow">Follow Us</h4>
                             <div class="social">
                                 <ul class="social__list">
@@ -333,16 +346,20 @@
                                         </a>
                                     </li>
                                 </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                            </div><!--/.social-->
+                        </div><!--/.follow-->
+                    </div><!--/.subscribe-->
+                </div><!--/.footer-top-->
             </div>        
-            <div class="footer-buttom">
+            <div class="footer-bottom">
                     <p>© 2020. All Rights Reserved.</p>
-                    <p><img src="" alt="Top"><a href="#top">Top</a></p>
-            </div>
-        </section>    
+                        <a class="gotop" href="#top">Go top
+                            <img class="orange-square" src="./assets/images/SMweb/gotop.png" alt="Top Direction">
+                            <img class="top-arrow" src="./assets/images/SMweb/GotopArrow.png" alt="Top arrow">
+                        </a>
+                    </div>
+            </div><!--/.footer-bottom-->
+        </section><!--/.footer-->    
     </footer>
 </body>
 </html>
