--- a/index.html
+++ b/index.html
@@ -143,27 +143,31 @@
     </section>
 
     <section class="about">
-        <img class="summer-pic" src="./assets/images/SMweb/welsum.png" alt="welcome-summer">
-        <div class="about-top">
-            <h2 class="title title__white">What makes Smoothie<br>
+        <div class="container-about">
+            <div class="summer-pic">
+                <img src="./assets/images/SMweb/welsum.png" alt="welcome-summer">
+            </div>
+            <div class="about-top">
+                <h2 class="title title__white">What makes Smoothie<br>
                 an <span class="newcolor">awesome drink?</span></h2>
                 <img class="underline" src="assets/images/SMweb/lineGreen.png" alt="Green Line">
-            <ul class="about-list">
-                <li>Crunchy <span>Puffs Texture</span></li>
-                <li>100 Calories <span>per drink</span></li>
-                <li><span>4g Plant Protein</span></li>
-                <li><span>Good source of</span> Magnesium & Vitamin B6</li>
-                <li>No Sugar <span>in our Savory Flavors</span></li>
-                <li>Non-GMO, Vegan & Paleo</li>
-                <li>Gluten-Free & Grain-Free</li>
-                <li>Corn-Free & Soy-Free</li>
-            </ul>
+                    <ul class="about-list">
+                    <li>Crunchy <span>Puffs Texture</span></li>
+                    <li>100 Calories <span>per drink</span></li>
+                    <li><span>4g Plant Protein</span></li>
+                    <li><span>Good source of</span> Magnesium & Vitamin B6</li>
+                    <li>No Sugar <span>in our Savory Flavors</span></li>
+                    <li>Non-GMO, Vegan & Paleo</li>
+                    <li>Gluten-Free & Grain-Free</li>
+                    <li>Corn-Free & Soy-Free</li>
+                </ul>
                 <div class="about__btn-wrapper">
                     <button class="btn btn--opacity-bg">About organic smoothies
                         <img class="arrow-yellow" src="./assets/images/SMweb/Arrow.png">
                     </button>  
                 </div>                 
-        </div>
+            </div>
+        </div>    
     </section>
 
     <section class="products">
@@ -299,8 +303,7 @@
                     <div class="info">
                         <h4>Information</h4>
                         <ul class="info__list">
-                            <li class="info__item">
-                                <a class="info__link" href="">Search</a></li>
+                            <li class="info__item"><a class="info__link" href="">Search</a></li>
                             <li class="info__item"><a class="info__link" href="">Contact us</a></li>
                             <li class="info__item"><a class="info__link" href="">Terms & Conditions</a></li>
                             <li class="info__item"><a class="info__link" href="">Privacy Policy</a></li>
@@ -352,11 +355,11 @@
                 </div><!--/.footer-top-->
             </div>        
             <div class="footer-bottom">
-                    <p>© 2020. All Rights Reserved.</p>
-                        <a class="gotop" href="#top">Go top
+                    <p class="footer-bottom__item">© 2020. All Rights Reserved.</p>
+                    <a class="gotop" href="#top">Go top
                             <img class="orange-square" src="./assets/images/SMweb/gotop.png" alt="Top Direction">
                             <img class="top-arrow" src="./assets/images/SMweb/GotopArrow.png" alt="Top arrow">
-                        </a>
+                    </a>
                     </div>
             </div><!--/.footer-bottom-->
         </section><!--/.footer-->    
